# qvac-ext-stable-diffusion.cpp

./: .gitignore  .gitmodules  BUILDING_WAN.md  CMakeLists.txt  METAL_IM2COL_3D_PATCH.md  Makefile  README.md  test_m2.sh
.github/: CODEOWNERS
.github/workflows/: check-approvals.yml  ltx2-ci.yml  ltx2.yml  security-baseline.yml
_build_cli/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
_build_cli/examples/: Makefile  cmake_install.cmake
_build_cli/examples/cli/: Makefile  cmake_install.cmake
_build_cli/examples/server/: Makefile  cmake_install.cmake
bare/: CMakeLists.txt  README.md  binding.c  binding.js  index.js  package.json  test.js
docs/: build.md  ltx2.md  ltx2_feasibility.md
examples/: generate-video-ltx.sh
examples/common/: common.cpp
include/: ltx2.h  stable-diffusion.h
script/: ci_ltx2_load_smoke.sh  convert_ltx2.py  convert_ltx2_to_gguf.py  ltx2_parity.py  make_synthetic_ltx2_gguf.py  requirements-ltx2.txt
src/: conditioner.hpp  denoiser.hpp  diffusion_model.hpp  flux.hpp  gemma3.hpp  ggml_extend.hpp  ggml_extend_backend.cpp  ggml_graph_cut.cpp  ltx2.hpp  model.cpp  model.h  rope.hpp  stable-diffusion.cpp  upscaler.cpp  upscaler.h  util.cpp  util.h  vae.hpp
src/core/: ggml_extend.hpp  ggml_graph_cut.cpp  util.cpp  util.h
src/model/common/: rope.hpp
src/model/diffusion/: flux.hpp
src/model/vae/: vae.hpp
test-wan/: GETTING_STARTED.md  INDEX.md  QUICKSTART.txt  README.md  download-models.sh  test-wan-models.sh  verify-setup.sh  wan-functions.sh
